--- a/Glowing_Text_Effect/style.css
+++ b/Glowing_Text_Effect/style.css
@@ -4,6 +4,9 @@ body {
     background-color: rgb(17, 15, 15);
 }
 
-ul {
-
+ul{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
