--- a/Glowing_Text_Effect/style.css
+++ b/Glowing_Text_Effect/style.css
@@ -17,4 +17,7 @@ ul li {
     list-style: none;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 2em;
+    letter-spacing: 15px;
+    text-shadow: none;
+    animation: animate 1s infinte linear;
 }
