--- a/Glowing_Text_Effect/style.css
+++ b/Glowing_Text_Effect/style.css
@@ -50,4 +50,9 @@ ul li {
         text-shadow: 0 0 7px yellow, 0 0 20px #ff6c00;
     }
 
+    70% {
+        color: black;
+        text-shadow: none;
+      }
+
 }
