--- a/Glowing_Text_Effect/style.css
+++ b/Glowing_Text_Effect/style.css
@@ -58,8 +58,12 @@ ul li {
     85% {
         color: yellow;
         text-shadow: 0 0 7px yellow, 0 0 20px #ff6c00;
-      }
+    }
+
+    90% {
+        color: black;
+        text-shadow: none;
+    }
 
     
-
 }
