--- a/Glowing_Text_Effect/style.css
+++ b/Glowing_Text_Effect/style.css
@@ -71,15 +71,22 @@ ul li {
     }
 }
 
-ul li:nth-child(1){
+ul li:nth-child(1) {
     animation-delay: .3s;
 }
-ul li:nth-child(2){
+
+ul li:nth-child(2) {
     animation-delay: .6s;
 }
-ul li:nth-child(3){
+
+ul li:nth-child(3) {
     animation-delay: .9s;
 }
-ul li:nth-child(4){
+
+ul li:nth-child(4) {
     animation-delay: 1.2s;
+}
+
+ul li:nth-child(5) {
+    animation-delay: 1.5s;
 }
